--- a/pages/meetupDetail.html
+++ b/pages/meetupDetail.html
@@ -36,7 +36,7 @@
 
 <!-- Meetup Title -->
 <div class="row text-center">
-    <h1 id="name-field">Meetup</h1>
+    <h1 id="name-field">Loading...</h1>
 </div>
 
 <!-- Meetup Picture -->
@@ -60,43 +60,43 @@
                 <td>Squad:</td>
             </tr>
             <tr>
-                <td id="squad-field">Squad.</td>
+                <td id="squad-field">Loading...</td>
             </tr>
             <tr>
                 <td>Status:</td>
             </tr>
             <tr>
-                <td id="status-field">Status.</td>
+                <td id="status-field">Loading...</td>
             </tr>
             <tr>
                 <td>Start Date:</td>
             </tr>
             <tr>
-                <td id="start-field">Start Date.</td>
+                <td id="start-field">Loading...</td>
             </tr>
             <tr>
                 <td>End Date:</td>
             </tr>
             <tr>
-                <td id="end-field">End Date.</td>
+                <td id="end-field">Loading...</td>
             </tr>
             <tr>
                 <td>Description:</td>
             </tr>
             <tr>
-                <td id="description-field">Description.</td>
+                <td id="description-field">Loading...</td>
             </tr>
             <tr>
                 <td>Address:</td>
             </tr>
             <tr>
-                <td id="address-field">Address.</td>
+                <td id="address-field">Loading...</td>
             </tr>
             <tr>
                 <td>Host:</td>
             </tr>
             <tr>
-                <td id="host-field">Host.</td>
+                <td id="host-field">Loading...</td>
             </tr>
             </tbody>
         </table>
