--- a/pages/navigation.html
+++ b/pages/navigation.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
-<nav class="navbar navbar-default">
+<head>
+    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../css/custom.css">
+</head>
+
+<nav class="navbar navbar-default navbar-static-top">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="home.html">Squads!</a>
         </div>
-
-
-        <form class="navbar-form navbar-left">
-            <a href="squadList.html" class="btn btn-default">Squads</a>
-            <a href="meetupList.html" class="btn btn-default">Meetups</a>
-            <a href="placeList.html" class="btn btn-default">Places</a>
-            <a href="meetupDetail.html" class="btn btn-default">meetupDetail</a>
-        </form>
-
-
-        <form class="navbar-form navbar-right">
-            <p class="navbar-text">Thomas Wheatley</p>
-        </form>
-
-
+        <ul class="nav navbar-nav">
+            <li id="nav-squadList"><a href="squadList.html">Squads</a></li>
+            <li id="nav-meetupList"><a href="meetupList.html">Meetups</a></li>
+            <li id="nav-placeList"><a href="placeList.html">Places</a></li>
+            <li id="nav-meetupDetail"><a href="meetupDetail.html">meetupDetail</a></li>
+        </ul>
     </div>
 </nav>
