--- a/pages/meetupList.html
+++ b/pages/meetupList.html
@@ -13,8 +13,10 @@
     <div id="nav-placeholder"></div>
 
     <script>
-        $(function(){
-            $("#nav-placeholder").load("navigation.html");
+        $(function () {
+            $("#nav-placeholder").load("navigation.html", function () {
+                $("#nav-meetupList").addClass("active");
+            });
         });
     </script>
     <!--end of Navigation bar-->
