meetupDetails can now load multiple Meetups
Gets the meetupId from the url and tries to load that Meetup.

--- a/pages/navigation.html
+++ b/pages/navigation.html
@@ -13,7 +13,7 @@
             <li id="nav-squadList"><a href="squadList.html">Squads</a></li>
             <li id="nav-meetupList"><a href="meetupList.html">Meetups</a></li>
             <li id="nav-placeList"><a href="placeList.html">Places</a></li>
-            <li id="nav-meetupDetail"><a href="meetupDetail.html">meetupDetail</a></li>
+            <li id="nav-meetupDetail"><a href="meetupDetail.html?meetupId=-KkLiIDxovOGIzH8iD5G">meetupDetail</a></li>
         </ul>
     </div>
 </nav>
