User Count and Alert
Displays the amount of users attending a Meetup and displays an alert if
no Meetup with the supplied ID exists.

--- a/pages/meetupDetail.html
+++ b/pages/meetupDetail.html
@@ -37,6 +37,10 @@
     });
 </script>
 
+<div class="alert alert-danger hidden" role="alert">
+    <strong>Oh snap!</strong> There doesnt appear to be a Meetup with that ID! <a href="javascript:history.back()" class="alert-link">Take me back!</a>
+</div>
+
 <!-- Meetup Title -->
 <div class="row text-center">
     <h1 id="name-field">Loading...</h1>
