Pseudo Attend Button
Attend button which increments/decrements the attending count.

--- a/pages/meetupDetail.html
+++ b/pages/meetupDetail.html
@@ -124,11 +124,16 @@
             <tr>
                 <td id="attending-field" class="panel-info">Loading...</td>
             </tr>
-
             </tbody>
         </table>
     </div>
+
+    <!-- Button to attend or unattend the Meetup -->
+    <button id="attend-btn" type="button" class="btn btn-primary btn-lg">Attend</button>
+
 </div>
+
+
 
 </body>
 </html>
