meetupDetail Error Checking
Informs the user if something went wrong with their request.

--- a/pages/meetupDetail.html
+++ b/pages/meetupDetail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>meetupDetail</title>
+    <title>Squads!</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/custom.css">
@@ -38,7 +38,7 @@
 </script>
 
 <div class="alert alert-danger hidden" role="alert">
-    <strong>Oh snap!</strong> There doesnt appear to be a Meetup with that ID! <a href="javascript:history.back()" class="alert-link">Take me back!</a>
+    <strong>Oh snap! </strong><span id="error-field">Error Message</span><a href="javascript:history.back()" class="alert-link"> Take me back!</a>
 </div>
 
 <!-- Meetup Title -->
