--- a/pages/navigation.html
+++ b/pages/navigation.html
@@ -14,6 +14,7 @@
             <li id="nav-meetupList"><a href="meetupList.html">Meetups</a></li>
             <li id="nav-placeList"><a href="placeList.html">Places</a></li>
             <li id="nav-meetupDetail"><a href="meetupDetail.html?meetupId=-KkLiIDxovOGIzH8iD5G">meetupDetail</a></li>
+            <li id="nav-placeDetail"><a href="placeDetail.html?placeId=-KkGwyfq1RIdM79HCUng">placeDetail</a></li>
         </ul>
     </div>
 </nav>
